--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #mis variables de entorno 
 PORT = 3000
 NODE_ENV = prod
-
+HOST =
 DB_PROT_PASS ="node12"
 DN_PROT_USER ="Postgress"
 DB_PROT_HOST= "localhost"
